# thought_and_draw

./: .gitignore  00_gen_pic_desc.py  01_train.py  02_predict.py  README.md  pyproject.toml
logging_dir/epoch5/: events.out.tfevents.1757247565.zsd-System-Product-Name.438622.0
logging_dir/line_token/: events.out.tfevents.1757522309.zsd-System-Product-Name.57015.0
